luarocksorg/state/OSX/x86/log/bigint~1.0.2-1_err.txt
Warning: skipping dependency checks.
bigint-glue.cpp:75:14: error: call to constructor of 'BigInt' is ambiguous
    *b = new BigInt(lua_tointeger(L, argidx));
             ^      ~~~~~~~~~~~~~~~~~~~~~~~~
./BigInt.h:58:2: note: candidate constructor
        BigInt(long);
        ^
./BigInt.h:59:2: note: candidate constructor
        BigInt(unsigned long);
        ^
./BigInt.h:55:2: note: candidate constructor
        BigInt(const BigInt&);
        ^
1 error generated.

Error: Build error: Failed compiling object bigint-glue.o
